crates/specta-zod/src/zod/snapshots/specta_zod__zod__tests__tuple_field.snap
---
source: crates/specta-zod/src/zod/tests.rs
expression: output
---
export const withTupleSchema = z.object({
  pair: jsonObject(z.tuple([z.string(), z.number()])),
});
export type WithTuple = z.infer<typeof withTupleSchema>;
