crates/specta-zod/src/zod/snapshots/specta_zod__zod__tests__tuple_struct.snap
---
source: crates/specta-zod/src/zod/tests.rs
expression: output
---
export const tupleStructSchema = z.tuple([z.string(), z.number()]);
export type TupleStruct = z.infer<typeof tupleStructSchema>;
