crates/specta-zod/src/zod/snapshots/specta_zod__zod__tests__untagged_enum.snap
---
source: crates/specta-zod/src/zod/tests.rs
expression: output
---
export const untaggedEnumSchema = z.union([z.string(), z.number()]);
export type UntaggedEnum = z.infer<typeof untaggedEnumSchema>;
